--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ant-design-vue": "^2.1.3",
     "axios": "^0.21.1",
     "echarts": "^5.1.1",
+    "js-cookie": "^2.2.1",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.0-alpha.13",
     "vue": "^3.0.5",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
+    "@types/js-cookie": "^2.2.6",
     "@types/node": "^15.0.2",
     "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
